--- a/Pages/InvestProyectos.razor
+++ b/Pages/InvestProyectos.razor
@@ -1,4 +1,4 @@
-@page "/proyectosInvest"
+@page "/investProyecto"
 @using NeuromktApi.Models
 @using NeuromktApi.Services
 @inject IEProyecto EProyecto
