--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -24,9 +24,9 @@
                 @* Solo INVESTIGADOR *@
                 @if (IsInvestigador)
                 {
-                    <RadzenPanelMenuItem Text="Proyectos" Path="/proyectosInvest" Icon="assignment" />
-                    <RadzenPanelMenuItem Text="Fragancias" Path="/investigador/pruebas" Icon="science" />
-                    <RadzenPanelMenuItem Text="Participantes" Path="/investigador/pruebas" Icon="people" />
+                    <RadzenPanelMenuItem Text="Proyectos" Path="/investProyecto" Icon="assignment" />
+                    <RadzenPanelMenuItem Text="Fragancias" Path="/investFragancias" Icon="science" />
+                    <RadzenPanelMenuItem Text="Participantes" Path="/investParticipante" Icon="people" />
                 }
 
             </RadzenPanelMenu>
